parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@with.py-3.snap
---
source: parser/src/lexer/lexer.rs
description: "with a as b, c as d: pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: With,
        value: None,
        start: 0,
        end: 4,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: As,
        value: None,
        start: 7,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 10,
        end: 11,
    },
    Token {
        kind: Comma,
        value: None,
        start: 11,
        end: 12,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 13,
        end: 14,
    },
    Token {
        kind: As,
        value: None,
        start: 15,
        end: 17,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 18,
        end: 19,
    },
    Token {
        kind: Colon,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: Pass,
        value: None,
        start: 21,
        end: 25,
    },
]
