parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__snapshot_test_lexer_and_errors@with.py-6.snap
---
source: parser/src/lexer/lexer.rs
description: "async with a as b, c as d:\n    pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
[
    Token {
        kind: Async,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: With,
        value: None,
        start: 6,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: As,
        value: None,
        start: 13,
        end: 15,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 16,
        end: 17,
    },
    Token {
        kind: Comma,
        value: None,
        start: 17,
        end: 18,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 19,
        end: 20,
    },
    Token {
        kind: As,
        value: None,
        start: 21,
        end: 23,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 24,
        end: 25,
    },
    Token {
        kind: Colon,
        value: None,
        start: 25,
        end: 26,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 26,
        end: 27,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 27,
        end: 31,
    },
    Token {
        kind: Pass,
        value: None,
        start: 31,
        end: 35,
    },
]
