parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__test-lexer-15.snap
---
source: parser/src/lexer/lexer.rs
description: "#"
---
[
    Token {
        kind: Sharp,
        value: None,
        start: 0,
        end: 1,
    },
]
